# job_tut_test

./: Readme.md  main.py  pyproject.toml  shemas.py
tests/: test_main.py
